tests/snapshots/yaml_suite_snapshots__yaml_suite_D83L_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- |-\n  explicit indent and chomp\n- |-\n  chomp and explicit indent\n"
  from: "@perlpunk"
  json: "[\n  \"explicit indent and chomp\",\n  \"chomp and explicit indent\"\n]\n"
  name: Block scalar indicator order
  tags: indent literal
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL |explicit indent and chomp\n   =VAL |chomp and explicit indent\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- |2-\n  explicit indent and chomp\n- |-2\n  chomp and explicit indent\n"
