tests/snapshots/yaml_suite_snapshots__yaml_suite_D88J_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow Sequence in Block Mapping
  from: NimYAML tests
  tags: flow sequence mapping
  yaml: "a: [b, c]\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": [\n    \"b\",\n    \"c\"\n  ]\n}\n"
  dump: "a:\n- b\n- c\n"
