tests/snapshots/yaml_suite_snapshots__yaml_suite_D88J_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "a:\n- b\n- c\n"
  from: NimYAML tests
  json: "{\n  \"a\": [\n    \"b\",\n    \"c\"\n  ]\n}\n"
  name: Flow Sequence in Block Mapping
  tags: flow sequence mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "a: [b, c]\n"
