tests/snapshots/yaml_suite_snapshots__yaml_suite_D9TU_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Single Pair Block Mapping
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/mapping.tml"
  tags: simple mapping
  yaml: "foo: bar\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
