tests/snapshots/yaml_suite_snapshots__yaml_suite_D9TU_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/mapping.tml"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  name: Single Pair Block Mapping
  tags: simple mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo: bar\n"
